--- a/adcDacTester/CMakeLists.txt
+++ b/adcDacTester/CMakeLists.txt
@@ -1,6 +1,15 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.5.1)
 project(adcDacTester C)
+
+find_package(Threads)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(adcDacTester main.c)
+set(COMMON_SRCS
+        src/mainThread.c
+        src/mainThread.h
+        src/helpers.c
+        src/helpers.h)
+
+add_executable(adcDacTester src/main.c ${COMMON_SRCS})
+target_link_libraries(adcDacTester ${CMAKE_THREAD_LIBS_INIT})
