--- a/sharedMemFIFOBench/CMakeLists.txt
+++ b/sharedMemFIFOBench/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.5.1)
 project(sharedMemFIFOBench C)
 
 find_package(Threads)
+find_library(LIBRT rt)
 
 set(CMAKE_C_STANDARD 11)
 
@@ -13,3 +14,4 @@ set(COMMON_SRCS
 
 add_executable(sharedMemFIFOBench src/main.c ${COMMON_SRCS})
 target_link_libraries(sharedMemFIFOBench ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(sharedMemFIFOBench ${LIB_RT})
