--- a/sharedMemFIFOBench/CMakeLists.txt
+++ b/sharedMemFIFOBench/CMakeLists.txt
@@ -22,8 +22,8 @@ set(CMAKE_C_STANDARD 11)
 set(COMMON_SRCS
         src/mainThread.c
         src/mainThread.h
-        src/helpers.c
-        src/helpers.h)
+        src/SharedMemoryFIFO.c
+        src/SharedMemoryFIFO.h)
 
 add_executable(sharedMemFIFOBench src/main.c ${COMMON_SRCS})
 target_link_libraries(sharedMemFIFOBench ${CMAKE_THREAD_LIBS_INIT} ${LIBRT})
