Tweaks to scripts for cyclopsBB rev1.  Also adding examble build dir with graphml for easy building

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "submodules/uhdToPipes"]
 	path = submodules/uhdToPipes
 	url = git@github.com:ucb-cyarp/uhdToPipes.git
+[submodule "submodules/vitis"]
+	path = submodules/vitis
+	url = git@github.com:ucb-cyarp/vitis.git
+[submodule "submodules/cyclopsASCIILink-sharedMem"]
+	path = submodules/cyclopsASCIILink-sharedMem
+	url = git@github.com:ucb-cyarp/cyclopsASCIILink.git
+[submodule "submodules/benchmarking"]
+	path = submodules/benchmarking
+	url = git@github.com:ucb-cyarp/benchmarking.git
